resources/screen-common.less
/* ... */
body {
	background: @base80;
	color: @text;
	font-family: @fonts;
	font-size: @font-size;
	line-height: 1.5;
}

/* Scroll bar */
html {
	scrollbar-color: @base70 @background;
	scrollbar-width: thin;

	::-webkit-scrollbar {
		width: 10px;
		height: 10px;
	}

	::-webkit-scrollbar-track {
		background-color: @background;
	}

	::-webkit-scrollbar-thumb {
		background: @base70;
	}

	::-webkit-scrollbar-button {
		display: none;
		width: 0;
		height: 0;
	}

	::-webkit-scrollbar-corner {
		background-color: transparent;
	}
}

#mw-content {
	padding: 0 2.5em 2.5em;
	background: @background;

	.ve-activated & {
		padding-top: 1em;
	}

	.toc {
		border: 1px solid @base70;
		background: @base90;

		& > ul {
			margin: 1em 0;
		}
	}
}

#bodyContentOuter {
	/* Set a z-index for the content to group it away from any nav stuff (extensions) - T200148 */
	position: relative;
	z-index: 0;
}

.mw-footer-container {
	background-color: @base80;
	color: #000;
	font-size: 0.925em;

	ul {
		margin: 0;
	}
}

#p-logo {
	margin: auto;
	text-align: center;
}

#p-logo-text {
	line-height: 1;
	text-align: center;

	a {
		display: block;
		color: @text;
		font-family: @fonts-secondary;
		font-size: 1.5em;
		font-variant: small-caps;

		/* 7+ character names */
		&.long {
			padding: 0 0.75em 0 0;
			font-size: 1.5em;
			line-height: 0.8;
		}
	}
}

/* Search */

#simpleSearch {
	position: relative;
	border: solid 1px @base70;
	background: @background;
}

#searchInput {
	width: 100%;
	height: 2.1em;
	min-height: 0;
	padding: 0.25em 4.5em 0.25em 2.5em;
	border: 0;
	margin: 0;
	background: transparent;
	box-shadow: none;
	font-family: inherit;
}

#searchButton,
#mw-searchButton {
	position: absolute;
	top: 0;
	right: 1.5em;
	width: 2.25em;
	height: 2.25em;
	padding: 0;
	margin: 0;
	background-image: url( images/search-ltr.svg );
	/* @noflip */
	background-position: center;
	box-shadow: none;
	.icon();
}

.suggestions {
	background: @background;
	box-shadow: 0 2px 2px 1px rgba( 0, 0, 0, 0.05 );

	.suggestions-special {
		padding: 0.75em 2em;
		border: 1px solid @base80;
		border-bottom-width: @border;
		background-color: @background;
	}

	.suggestions-results {
		border: 1px solid @base80;
		border-bottom-width: @border;
		background-color: @background;
	}

	.suggestions-result {
		padding: 0.65em 2em 0.35em;
		color: @text;
	}

	.suggestions-result-current {
		background-color: @blue;
		color: @background;
	}
}

.dropdown-toggle {
	.dropdown-header();
}

/* Footer */

.mw-footer {
	padding: 1.25em 3em;
	margin: auto;

	ul,
	li {
		padding: 0;
		margin: 1em 0;
		list-style: none;
	}

	#footer-icons {
		margin: auto;
	}

	.footer-icons {
		display: inline-block;
		margin: 1em auto;
	}

	.footer-icons img {
		margin: 5px;
	}

	#footer-info li {
		margin: 0.5em 0;
	}

	#footer-places li {
		display: inline-block;
		margin: 0 1em 0 0;
	}

	#lastmod,
	#credits,
	#copyright {
		display: block;
	}
}

/* Content */

#mw-content-container {
	background: @base95;
}

.tools-inline,
.tools-inline & {
	div,
	ul,
	li {
		display: inline-block;
		padding: 0;
		margin: 0;
		list-style: none;
	}
}

.tools-inline li {
	border-bottom: solid 3px transparent;
	margin: 0.5em 0;

	&:hover {
		border-bottom-color: @base70;
	}

	&.selected {
		border-bottom-color: @blue;

		a {
			color: @text;
		}
	}

	a {
		.ca-icon( 'images/page-tools-grey' );

		&:hover {
			text-decoration: none;
		}
	}
}

#p-views,
#p-more {
	float: right;

	li {
		margin-left: 1em;
	}
}

#ca-watch a {
	.ca-icon( 'images/star' );
	.ca-icon-only();
}

#ca-unwatch a {
	.ca-icon( 'images/star-filled' );
	.ca-icon-only();
}

#ca-unwatch.mw-watchlink-temp a {
	.ca-icon( 'images/star-half-filled' );
	.ca-icon-only();
}

#ca-edit a {
	.ca-icon( 'images/pencil-grey' );
}

#ca-history a,
#ca-undelete a {
	.ca-icon( 'images/clock-grey' );
}

#ca-talk a {
	.ca-icon( 'images/talk-grey' );
}

#ca-addsection a {
	.ca-icon( 'images/plus-grey' );
}

#ca-viewsource a {
	.ca-icon( 'images/wikitext-grey' );
}

#ca-view a,
#ca-view-foreign a {
	.ca-icon( 'images/eyeball-grey' );
}

#ca-view {
	.hidden();
}

#ca-nstab-special {
	.hidden();
}

/* Wikiplus */
#Wikiplus-Edit-TopBtn a {
	.ca-icon( 'images/wikiplus-grey' );
}

/* ToolsRedirect */
#ca-redirect a {
	.ca-icon( 'images/redirect-grey-ltr' );
}

.mw-content-rtl #ca-redirect a {
	.ca-icon( 'images/redirect-grey-rtl' );
}

/* MassEditRegex */
#ca-masseditregex a {
	.ca-icon( 'images/pencil-batch-grey' );
}

/* Namespaces */
#p-namespaces {
	float: left;

	li {
		margin-right: 1em;
	}
}

/* Fallback */
.tools-inline li[ id^='ca-nstab-' ] a {
	.ca-icon( 'images/page-grey' );
}

#siteNotice {
	margin: 0.5em auto 1.5em;
	font-size: 95%;
}

#localNotice {
	padding: 0;
	text-align: center;

	p {
		margin-right: 1em;
		margin-left: 1em;
	}
}

/* Misc */

a {
	color: @link;
	text-decoration: none;

	&:hover {
		color: darken( @link, 10% );
		text-decoration: underline;
	}

	&:visited {
		color: @link-visited;

		&:hover {
			color: darken( @link-visited, 10% );
		}
	}
}

a.new,
.new a {
	color: @link-red;

	&:hover {
		color: darken( @link-red, 10% );
	}

	&:visited {
		color: @link-red-visited;

		&:hover {
			color: darken( @link-red-visited, 10% );
		}
	}
}

.mw-parser-output a.extiw,
.mw-parser-output a.extiw:active,
.mw-parser-output a.external {
	padding-right: 14px;
	background-image: url( images/external-ltr.svg );
	background-position: center right;
	background-repeat: no-repeat;
	background-size: 12px;
	color: @link-ext;

	&:hover {
		color: darken( @link-ext, 10% );
	}

	&:visited {
		color: @link-ext-visited;

		&:hover {
			color: darken( @link-ext-visited, 10% );
		}
	}
}

.mw-content-rtl .mw-parser-output a.extiw,
.mw-content-rtl .mw-parser-output a.extiw:active,
.mw-content-rtl .mw-parser-output a.external {
	background-image: url( images/external-rtl.svg );
}

a.mw-selflink {
	color: inherit;
	font-weight: bold;
	text-decoration: inherit;
}
/* ... */

